examples/test/testpolicy13659.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13659
  namespace: namespace18
spec:
  podSelector:
    matchLabels:
      key10: value45
      key2: value8
      key32: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value7
      podSelector:
        matchLabels:
          key44: value25
